--- a/index.html
+++ b/index.html
@@ -2,29 +2,24 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>О деньгах!</title>
+    <title>checkbox</title>
     <link rel="stylesheet" href="css/general1.css">
     <style>
     </style>
 
 </head>
 <body>
+   
     <form action="very_important_information">
-        <textarea name="massage" placeholder="Hello world it's Igor, HOVER ME!"></textarea>
-        <div class="select_box">
-            <select name="Cars">
-                <option>Ferrari</option>
-                <option>Porsche</option>
-                <option>Rolls-Royce</option>
-                <option>Lamborghini</option>
-                <option>Maserati</option>
-            </select>  
-        <input type="text">
-        </div>     
-
+        <input id="checkbox1" type="checkbox">
+        <label for="checkbox1"> Котлетка+пюрешечка </label>
+        <input id="checkbox2" type="checkbox">
+        <label for="checkbox2"> Сосисочка+жаренная картошечка </label>
+        <input id="checkbox3" type="checkbox">
+        <label for="checkbox3"> Пельмешки </label>
     </form>
 
-    
+
     <script>  </script> 
 </body>
 </html>
